# shadow-codec-ops

./: .gitignore  BUILD_VALIDATION.md  CAMPAIGN_BUILDER_REPORT.md  CAMPAIGN_NARRATIVE_REPORT.md  CAMPAIGN_OPS_REPORT.md  CODEC_CANON_DATA_REPORT.md  CODEC_CONTENT_ASSETS_REPORT.md  CODEC_CORE_FIDELITY_REPORT.md  CODEC_DRAWERS_AND_AVATARS_REPORT.md  CODEC_EXPORT_REPLAY_REPORT.md  CODEC_FIDELITY_AUDIT.md  CODEC_SIGNAL_INTELLIGENCE_REPORT.md  CODEC_VISUAL_IDENTITY_REPORT.md  DIRECTOR_MODE_REPORT.md  MG1_COMPLETE_CODEC_AND_SIDEOPS_REPORT.md  MGS1_CODEC_PASS_A_REPORT.md  MGS1_CODEC_PASS_B_REPORT.md  MGS1_CODEC_PASS_C_REPORT.md  MGS1_CODEC_PASS_D_REPORT.md  MGS2_COMPLETE_CODEC_REPORT.md  MGS3_COMPLETE_CODEC_REPORT.md  MISSION_BUILDER_REPORT.md  MOBILE_PWA_REPORT.md  NARRATIVE_AUDIO_REPORT.md  PROJECT_ROADMAP.md  QA_REPORT.md  README.md  VOICE_PACK_REPORT.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts  vitest.config.ts
scripts/: buildMg1ReviewSheets.py  build_mgs1_vr_environment_assets.py  build_mgs1_vr_gameplay_assets.py  check-pwa.mjs  generate_mg1_actor_animations.py  generate_mg1_projectiles_vfx.py  generate_mgs1_actor_animations.py  generate_mgs1_projectiles_vfx.py  generate_mgs1_static_assets.py  normalizeMg1Sprite.py
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx  AppLayout.tsx  HomeScreen.tsx
src/data/: bosses.json  campaigns.json  codecAssetPacks.json  (+40 more)
(+203 files in other folders)
