[package]
name = "shadow-codec-ops"
version = "3.4.0"
description = "Shadow Codec Ops private simulator"
authors = ["Darknigthmare"]
edition = "2021"

[lib]
name = "shadow_codec_ops_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
